--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.2",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.1.5",
     "@sanity/astro": "^3.1.6",
     "@sanity/client": "^6.22.4",
     "@sanity/visual-editing": "^2.7.0",
